--- a/src/WorkflowEngine.Sdk.Persistence.Sql/WorkflowEngine.Sdk.Persistence.Sql.csproj
+++ b/src/WorkflowEngine.Sdk.Persistence.Sql/WorkflowEngine.Sdk.Persistence.Sql.csproj
@@ -4,20 +4,26 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <AssemblyName>Nexus.Link.WorkflowEngine.Sdk.Persistence.Sql</AssemblyName>
     <RootNamespace>Nexus.Link.WorkflowEngine.Sdk.Persistence.Sql</RootNamespace>
+  </PropertyGroup>
 
+  <!-- Publish symbols -->
+  <PropertyGroup>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <!-- Publish the repository URL in the built .nupkg (in the NuSpec <Repository> element) -->
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
-
     <!-- Embed source files that are not tracked by the source control manager in the PDB -->
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
-
     <!-- Recommended: Embed symbols containing Source Link in the main file (exe/dll) -->
     <DebugType>embedded</DebugType>
     <IncludeSymbols>true</IncludeSymbols>
   </PropertyGroup>
 
+  <!-- Publish symbols -->
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Nexus.Link.DatabasePatcher" Version="2.6.0" />
     <PackageReference Include="Nexus.Link.Libraries.SqlServer" Version="2.13.5" />
   </ItemGroup>
