--- a/src/WorkflowEngine.Sdk.Persistence.Abstract/WorkflowEngine.Sdk.Persistence.Abstract.csproj
+++ b/src/WorkflowEngine.Sdk.Persistence.Abstract/WorkflowEngine.Sdk.Persistence.Abstract.csproj
@@ -33,7 +33,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk.Persistence.Abstract</PackageId>
-    <Version>2.4.5</Version>
+    <Version>2.4.6</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -43,6 +43,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      2.4.6 Bump
       2.4.5 Removed obsolete tables, corrections due to new test cases
       2.4.4 Bump
       2.4.3 Changed how we deal with database patching
