--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -26,9 +26,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.11.1" />
-    <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.9.3" />
-    <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.10.4" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.12.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.10.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.11.0" />
     <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.24.7" />
     <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.1.0" />
     <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="1.0.3" />
@@ -65,6 +65,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      5.1.11 Bump
       5.1.10 Bug: A new assertion was wrong. Bug: WorkflowInstanceId could be lowercase. Bug: ResultAsJson was empty string
       5.1.9 Made all classes that not need to be visible internal instead of public
       5.1.8 Bump
