--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -55,7 +55,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk</PackageId>
-    <Version>5.4.5</Version>
+    <Version>5.4.6</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -65,6 +65,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      5.4.6 Corrected bugs found when unit testing
       5.4.5 When the semaphore has been lowered, we no longer try to extend the expiration time
       5.4.4 Corrected ActivitySemaphore interface
       5.4.0 Added ActititySemaphore
