--- a/test/WorkflowEngine.Sdk.UnitTests/WorkflowEngine.Sdk.UnitTests.csproj
+++ b/test/WorkflowEngine.Sdk.UnitTests/WorkflowEngine.Sdk.UnitTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -9,12 +9,17 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
+    <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="coverlet.collector" Version="3.1.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Moq" Version="4.16.1" />
-    <PackageReference Include="MSTest.TestAdapter" Version="2.2.7" />
-    <PackageReference Include="MSTest.TestFramework" Version="2.2.7" />
     <PackageReference Include="Shouldly" Version="4.0.3" />
-    <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.UnitTests" Version="1.0.3" />
-    <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.UnitTests" Version="1.1.1" />
     <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.24.7" />
     <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.2.0" />
     <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="1.1.4" />
@@ -25,6 +30,8 @@
     <ProjectReference Include="..\..\src\AsyncManager.Sdk\AsyncManager.Sdk.csproj" />
     <ProjectReference Include="..\..\src\WorkflowEngine.Sdk.Persistence.Memory\WorkflowEngine.Sdk.Persistence.Memory.csproj" />
     <ProjectReference Include="..\..\src\WorkflowEngine.Sdk\WorkflowEngine.Sdk.csproj" />
+    <ProjectReference Include="..\Capabilities.WorkflowConfiguration.UnitTests\Capabilities.WorkflowConfiguration.UnitTests.csproj" />
+    <ProjectReference Include="..\Capabilities.WorkflowState.UnitTests\Capabilities.WorkflowState.UnitTests.csproj" />
   </ItemGroup>
 
 </Project>
