--- a/test/WorkflowEngine.Sdk.UnitTests/WorkflowEngine.Sdk.UnitTests.csproj
+++ b/test/WorkflowEngine.Sdk.UnitTests/WorkflowEngine.Sdk.UnitTests.csproj
@@ -21,8 +21,8 @@
     <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="Shouldly" Version="4.0.3" />
     <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.24.7" />
-    <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.2.0" />
-    <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="1.1.4" />
+    <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.3.0" />
+    <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="1.1.5-alfa01" />
     <PackageReference Include="Nexus.Link.Components.WorkflowMgmt.Abstract" Version="2.0.0" />
   </ItemGroup>
 
