--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -31,7 +31,7 @@
     <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.12.3" />
     <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.24.7" />
     <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.3.0" />
-    <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="1.1.5" />
+    <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="1.1.6" />
     <PackageReference Include="Nexus.Link.Components.WorkflowMgmt.Abstract" Version="2.0.0" />
   </ItemGroup>
 
@@ -55,7 +55,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk</PackageId>
-    <Version>5.5.6</Version>
+    <Version>5.5.7</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -65,6 +65,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      5.5.7 Bump
       5.5.6 Now validates WorkflowSummary before returning it
       5.5.5 Added logging in CallAsyncManagerForAsynchronousRequests
       5.5.3 Now enfore IActivityForEachParallel to have a key method
