--- a/src/AsyncManager.Sdk.AspNet/AsyncManager.Sdk.AspNet.csproj
+++ b/src/AsyncManager.Sdk.AspNet/AsyncManager.Sdk.AspNet.csproj
@@ -24,7 +24,7 @@
 
   <ItemGroup>
     <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="3.0.2" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.16.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.17.0-alpha-01" />
   </ItemGroup>
 
   <ItemGroup>
