--- a/src/AsyncManager.Sdk/AsyncManager.Sdk.csproj
+++ b/src/AsyncManager.Sdk/AsyncManager.Sdk.csproj
@@ -38,9 +38,9 @@
 
   <ItemGroup>
     <PackageReference Include="Nexus.Link.Capabilities.AsyncRequestMgmt.Abstract" Version="3.0.3" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.16.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.17.0-alpha-01" />
     <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.12.3" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.24.7" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="5.25.0-alpha-01" />
   </ItemGroup>
 
   <PropertyGroup>
