--- a/src/KeyTranslator.Sdk/Keytranslator.Sdk.csproj
+++ b/src/KeyTranslator.Sdk/Keytranslator.Sdk.csproj
@@ -18,7 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.24.7" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="5.25.0-alpha-01" />
   </ItemGroup>
 
   <!--<ItemGroup>
