--- a/src/WorkflowEngine.Sdk.Persistence.Abstract/WorkflowEngine.Sdk.Persistence.Abstract.csproj
+++ b/src/WorkflowEngine.Sdk.Persistence.Abstract/WorkflowEngine.Sdk.Persistence.Abstract.csproj
@@ -26,7 +26,7 @@
   <ItemGroup>
     <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.3.0" />
     <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="1.1.6" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.16.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.17.0-alpha-01" />
     <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.12.3" />
     <PackageReference Include="Nexus.Link.Libraries.SqlServer" Version="2.15.1" />
   </ItemGroup>
