--- a/src/WorkflowEngine.Sdk.UnitTest/WorkflowEngine.Sdk.UnitTest.csproj
+++ b/src/WorkflowEngine.Sdk.UnitTest/WorkflowEngine.Sdk.UnitTest.csproj
@@ -26,7 +26,7 @@
 
   <ItemGroup>
     <PackageReference Include="Moq" Version="4.16.1" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.16.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.17.0-alpha-01" />
   </ItemGroup>
 
   <ItemGroup>
