WorkflowEngine.Sdk: 6.1.0 Added Parallel. Fixed ActivitySleep bug, which could make it sleep forever

--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -30,7 +30,7 @@
     <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.10.3" />
     <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.12.4" />
     <PackageReference Include="Nexus.Link.Libraries.Web" Version="5.30.0" />
-    <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.5.1" />
+    <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.6.0" />
     <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="2.0.0" />
     <PackageReference Include="Nexus.Link.Components.WorkflowMgmt.Abstract" Version="2.0.1" />
   </ItemGroup>
@@ -52,10 +52,13 @@
       <_Parameter1>$(AssemblyName).UnitTest</_Parameter1>
     </AssemblyAttribute>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Model\" />
+  </ItemGroup>
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk</PackageId>
-    <Version>6.0.0</Version>
+    <Version>6.1.0</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -65,6 +68,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      6.1.0 Added Parallel. Fixed ActivitySleep bug, which could make it sleep forever
       6.0.0 Refactored Semaphores and modified Sleep. Semaphore is not backwards compatible
       5.7.2 Bump
       5.7.1 Now postpones the activity logs purge until the workflow logs purge, to avoid too many parallel connections with the database
@@ -73,7 +77,7 @@
       5.5.10 Bump
       5.5.6 Now validates WorkflowSummary before returning it
       5.5.5 Added logging in CallAsyncManagerForAsynchronousRequests
-      5.5.3 Now enfore IActivityForEachParallel to have a key method
+      5.5.3 Now enforce IActivityForEachParallel to have a key method
       5.5.2 Fixed bug for WorkflowFailedException
       5.5.1 Consolidated service contracts
       5.5.0 Implemented IWorkflowMgmtCapability
