--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -35,8 +35,8 @@
     <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.10.4" />
     <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.12.5" />
     <PackageReference Include="Nexus.Link.Libraries.Web" Version="5.30.1" />
-    <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.7.0-alfa01" />
-    <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="2.0.2-alfa01" />
+    <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.7.0" />
+    <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="2.0.2" />
     <PackageReference Include="Nexus.Link.Components.WorkflowMgmt.Abstract" Version="2.0.2" />
   </ItemGroup>
 
@@ -73,7 +73,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
-      6.4.0 ActivityExecutor now understands FulcrumExceptions. Added ActivityIf and ActivitySwitch. Added 
+      6.4.0 ActivityExecutor now understands FulcrumExceptions. Added ActivityIf and ActivitySwitch. Added SetMaxExecutionTimeSpan
       6.3.1 Refactored ActivityExecutor to make the code more consistent and readable
       6.3.0 Introduced lazy logging, i.e. log storage is delayed until the workflow is postponed or completed
       6.2.0 Refactored to make it easier to do unit tests
