--- a/test/Capabilities.WorkflowState.UnitTests/Capabilities.WorkflowState.UnitTests.csproj
+++ b/test/Capabilities.WorkflowState.UnitTests/Capabilities.WorkflowState.UnitTests.csproj
@@ -29,8 +29,8 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="Shouldly" Version="4.0.3" />
-    <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.7.0-alfa01" />
-    <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="2.0.2-alfa01" />
+    <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.7.0" />
+    <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="2.0.2" />
   </ItemGroup>
   
   <PropertyGroup>
