WorkflowEngine.Sdk: 6.7.4 Unit tests + correcting bug for IActivity.Iteration

--- a/test/WorkflowEngine.Sdk.UnitTests/WorkflowEngine.Sdk.UnitTests.csproj
+++ b/test/WorkflowEngine.Sdk.UnitTests/WorkflowEngine.Sdk.UnitTests.csproj
@@ -5,6 +5,7 @@
     <AssemblyName>Nexus.Link.WorkflowEngine.Sdk.UnitTests</AssemblyName>
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
     <IsPackable>false</IsPackable>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
